--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <title></title>
+  <title>Tyler Jarboe - Portfolio</title>
   <link href="./style.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <script defer src="./spin-animation.js"></script>
@@ -19,6 +19,12 @@
     <!-- Background -->
     <div class="absolute top-0 left-0 right-0 bottom-0 z-[0]">
       <canvas id="game-of-life" class="w-full h-full" />
+    </div>
+    <div class="signal-down z-[1]">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        class="size-10">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5" />
+      </svg>
     </div>
     <div class="flex w-full h-full z-[10]">
       <div class="w-1/2 h-full flex justify-center items-center">
@@ -37,7 +43,7 @@
 
 
   <!-- About -->
-  <div class="w-full xl:w-[80%] 2xl:w-[60%] h-fit py-30 px-10 flex justify-center items-center">
+  <div class="w-full xl:w-[80%] 2xl:w-[70%] h-fit mt-30 px-10 flex justify-center items-center">
     <div class="hidden md:flex w-1/3 h-full flex-col justify-center items-center gap-5">
       <img src="./Assets/florida-polytechnic-logo.jpg" alt="Florida Polytechnic Logo"
         class="w-4/7 object-cover rounded-lg border border-2 border-white" />
@@ -72,6 +78,40 @@
     <div class="w-full md:w-2/3 h-full flex flex-col justify-center gap-5 px-5">
       <h1 class="font-extrabold text-3xl ms-3">About Me</h1>
       <hr />
+      <div class="flex flex-wrap gap-5 w-full justify-center items-center">
+
+        <a class="border border-2 p-2 flex rounded-xl shadow-rose-300/50 hover:bg-rose-300 hover:text-black hover:shadow-md items-center w-fit h-10"
+          href="mailto:tyler2.jarboe@gmail.com">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6 me-2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+          </svg>
+          tyler2.jarboe@gmail.com
+        </a>
+
+        <a class="border border-2 p-2 flex rounded-xl shadow-green-300/50 hover:bg-green-300 hover:text-black hover:shadow-md items-center w-fit h-10"
+          href="tel:+1954-801-7915">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6 me-2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
+          </svg>
+          (954) 801-7915
+        </a>
+
+        <a class="border border-2 p-2 flex rounded-xl shadow-sky-300/50 hover:bg-sky-300 hover:text-black hover:shadow-md w-fit h-10"
+          href="https://www.linkedin.com/in/tyler-jarboe-239b39215/" target="_blank">
+          <img src="https://logos.hunter.io/linkedin.com" alt="GitHub Logo" class="w-full me-2" />
+          LinkedIn
+        </a>
+
+        <a class="border border-2 p-2 flex rounded-xl shadow-gray-300/50 hover:bg-gray-300 hover:text-black hover:shadow-md w-fit h-10"
+          href="https://github.com/BotTyler" target="_blank">
+          <img src="https://logos.hunter.io/github.com" alt="GitHub Logo" class="w-full me-2 bg-white rounded-full" />
+          GitHub
+        </a>
+      </div>
       <section>
         <h2 class="text-2xl font-bold">Purpose</h2>
         <p>I’m driven by a genuine interest in building <span class="text-red-400">software</span> that is both
@@ -106,8 +146,8 @@
   </div>
 
   <!-- Experience -->
-  <div class="w-full md:w-3/4 h-fit py-2 my-20 flex flex-col">
-    <h1 class="text-5xl font-extrabold underline text-center w-full">Experience</h1>
+  <div class="w-full md:w-3/4 h-fit py-2 mt-30 flex flex-col">
+    <h1 class="text-5xl font-extrabold underline text-center w-full mb-7">Experience</h1>
     <div class="flex-auto flex flex-col items-center my-3 gap-5">
       <section
         class="p-2 px-5 rounded-lg w-[80%] h-fit text-white bg-gray-800 border border-2 border-gray-500 shadow-md shadow-black hover-scale-up">
@@ -203,7 +243,7 @@
   </div>
 
   <!-- Projects -->
-  <div class="w-full h-fit my-35 py-5">
+  <div class="w-full h-fit mt-30">
     <h1 class="text-5xl font-extrabold underline text-center w-full mb-15">Projects</h1>
     <!-- Card List -->
     <div class="flex flex-wrap justify-center gap-20 items-stretch">
@@ -213,8 +253,9 @@
         <img src="./Assets/Dnd-TT-Interactive-Snapshot.png"
           class="w-full h-[190px] object-cover border border-b-2 border-gray-700" />
         <div class="p-2 flex flex-auto flex-col items-center">
-          <h1 class="text-lg font-extrabold">Discord-TT-Interactive (WIP)</h1>
-          <p class="text-md px-5">A real-time, Discord-embedded tabletop app built with React, Express, Colyseus, and
+          <h1 class="text-lg font-extrabold underline">Discord-TT-Interactive (WIP)</h1>
+          <p class="text-[18px] px-5">A real-time, Discord-embedded tabletop app built with React, Express, Colyseus,
+            and
             Docker
             that streamlines D&D combat for remote campaigns. Players can manage combat, share handouts, and chat
             seamlessly in a fantasy environment. Designed to bring the tabletop experience to Discord, giving players
@@ -231,10 +272,12 @@
         <img src="./Assets/BigDay-Snapshot.png"
           class="w-full h-[190px] object-cover border border-b-2 border-gray-700" />
         <div class="p-2 flex flex-auto flex-col items-center">
-          <h1 class="text-lg font-extrabold">Bigday - CRM (WIP)</h1>
-          <p class="text-md px-5">A powerful, custom CRM built with Spring and Angular, designed to help small to medium
+          <h1 class="text-lg font-extrabold underline">Bigday - CRM (WIP)</h1>
+          <p class="text-[18px] px-5">A powerful, custom CRM built with Spring and Angular, designed to help small to
+            medium
             businesses manage clients, sales, inventory, and team collaboration in one place. It features an intuitive
-            dashboard, seamless integration with third-party services, and tools to track prospects and streamline
+            dashboard, seamless integration and focus with third-party services, and tools to track prospects and
+            streamline
             workflows. Everything you need to scale your business efficiently, all in a single platform.</p>
         </div>
       </div>
@@ -243,8 +286,9 @@
         <img src="./Assets/Policy-Creator-Snapshot.png"
           class="w-full h-[190px] object-cover border border-b-2 border-gray-700" />
         <div class="p-2 flex flex-auto flex-col items-center">
-          <h1 class="text-lg font-extrabold">Policy Creator</h1>
-          <p class="text-md px-5">A fast, collaborative policy creator designed for building insurance proposals using
+          <h1 class="text-lg font-extrabold underline">Policy Creator</h1>
+          <p class="text-[18px] px-5">A fast, collaborative policy creator designed for building insurance proposals
+            using
             custom, tag-based templates. It’s dynamic, easy to use, fully serializable, and works completely offline,
             allowing staff to create and edit policies without connectivity constraints. Built for speed and teamwork,
             it streamlines proposal creation from draft to delivery.</p>
@@ -259,8 +303,8 @@
   </div>
 
   <!-- Resume -->
-  <div class="w-full h-[100vh] py-2 flex flex-col">
-    <h1 class="text-5xl font-extrabold underline text-center w-full">Resume</h1>
+  <div class="w-full h-[100vh] mt-30 py-2 flex flex-col">
+    <h1 class="text-5xl font-extrabold underline text-center w-full mb-7">Resume</h1>
     <div class="flex-auto p-3 flex justify-center items-center">
       <iframe src="Assets/Resume.pdf" class="w-full md:w-[85%] xl:w-1/2 h-full overflow-hidden"
         frameborder="1"></iframe>
