Changed Policy Creator Image and some wording.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="signal-down z-[1]">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-        class="size-10">
+        class="size-30">
         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5" />
       </svg>
     </div>
@@ -276,14 +276,14 @@
           <p class="text-[18px] px-5">A powerful, custom CRM built with Spring and Angular, designed to help small to
             medium
             businesses manage clients, sales, inventory, and team collaboration in one place. It features an intuitive
-            dashboard, seamless integration and focus with third-party services, and tools to track prospects and
+            dashboard, seamless integration with third-party services, and tools to track prospects and
             streamline
             workflows. Everything you need to scale your business efficiently, all in a single platform.</p>
         </div>
       </div>
       <div
         class="w-[400px] overflow-hidden border border-2 border-gray-300 rounded-xl shadow-black shadow-lg flex flex-col bg-gray-800 items-center hover-scale-up">
-        <img src="./Assets/Policy-Creator-Snapshot.png"
+        <img src="./Assets/Policy-Creator-Snapshot-2.png"
           class="w-full h-[190px] object-cover border border-b-2 border-gray-700" />
         <div class="p-2 flex flex-auto flex-col items-center">
           <h1 class="text-lg font-extrabold underline">Policy Creator</h1>
