Modified spacing for resume tab

--- a/index.html
+++ b/index.html
@@ -304,15 +304,15 @@
   </div>
 
   <!-- Resume -->
-  <div class="w-full h-[100vh] mt-30 py-2 flex flex-col">
+  <div class="w-full h-fit mt-30 py-2 flex flex-col">
     <h1 class="text-5xl font-extrabold underline text-center w-full mb-7">Resume</h1>
     <div class="flex-auto p-3 flex justify-center items-center">
-      <div id="resume-container" class="w-full md:w-[85%] xl:w-1/2 h-full overflow-hidden"></div>
+      <div id="resume-container" class="w-full md:w-[85%] xl:w-1/2 overflow-hidden"></div>
     </div>
   </div>
 
   <!-- Contact -->
-  <div class="w-full h-fit py-2">
+  <div class="w-full h-fit mt-30 py-2">
     <h1 class="text-5xl font-extrabold underline text-center w-full mb-2">Contact me!</h1>
     <div class="flex flex-wrap my-[25px] gap-5 w-full justify-center items-center">
 
